1999-11-07  Richard Henderson  <rth@cygnus.com>

	* config/tc-alpha.c (alpha_align): Check, don't assert, that
	the previous label was in the current section before playing
	with auto-alignment.

1999-11-06  Nick Clifton  <nickc@cygnus.com>

	* config/tc-v850.c (v850_force_relocation): Force relocation
        for weak symbols.
	(v850_pcrel_from_selection): Do not compute a pcrel offset if
        the symbol is weak.

1999-11-05  Michael Meissner  <meissner@cygnus.com>

	* expr.h (operatorT): Increase machine dependent operators to 16.
	* expr.c (op_rank): Ditto.

1999-11-03  Ian Lance Taylor  <ian@zembu.com>

	* read.c (pseudo_set): Reject attempts to set the value of a
	section symbol.

	* config/obj-elf.c (obj_elf_ident): Call md_flush_pending_output
	if it is defined.

	* config/obj-elf.c (elf_set_index): Add ATTRIBUTE_UNUSED.

	* config/obj-elf.c (elf_frob_file_after_relocs): Don't pass NULL
	to bfd_set_section_contents.

1999-11-03  Nick Clifton  <nickc@cygnus.com>

	* config/tc-mcore.h (TARGET_BYTES_BIG_ENDIAN): Change to false.

1999-11-01  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (macro_build): Use OPCODE_IS_MEMBER.
	(mips_ip): Use OPCODE_IS_MEMBER.

Wed Oct 27 16:50:44 1999  Don Lindsay  <dlindsay@cygnus.com>

	* config/tc-arm.c (reg_required_here): Improve comments.

        * config/tc-arm.c (thumb_opcode): Add "variants" field.
        (tinsns): Initialize variants field.

	* config/tc-arm.c (bad_args, bad_pc): Renamed to BAD_ARGS and
	BAD_PC respectively.

1999-10-27  Scott Bambrough  <scottb@netwinder.org>

	* config/tc-arm.c (reloc_map[]): Fix compiler warning.
	* config/tc-arm.h: Fix compile time warnings.

Mon Oct 18 18:11:10 MDT 1999	Diego Novillo <dnovillo@cygnus.com>

	* tc_d10v.c (find_opcode): Allow ATSIGN to match expressions of the
	form @abs16, @(abs16) and @(abs16 + imm).

1999-10-21  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (ISA_HAS_COPROC_DELAYS) : New.
	(ISA_HAS_64_BIT_REGS) New.